java--/parser/Parser.java
/* Parser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package parser;

import java.io.IOException;
import java.io.FileInputStream;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();
    private static int errors = 0;


    public Parser() {
    }

    public static void error_skipto(ParseException e, String error, int kind) {
        System.out.println("ERROR: Syntatic Error on " + error + ". " + e.toString());
        Token t;
        do {
            t = getNextToken();
            if(t.kind == EOF)
                break;
        } while (t.kind != kind);
    }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        ClassDeclaration();
{if ("" != null) return jjtn000;}
      } catch (ParseException e) {
System.out.println("Code Syntatic Error. " + e.toString());
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {Token t;
    try {
      jj_consume_token(CLASS);
      t = jj_consume_token(IDENTIFIER);
ASTCLASS_NAME jjtn001 = new ASTCLASS_NAME(JJTCLASS_NAME);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
                                 jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
      } finally {
if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001, true);
                                 }
      }
    } catch (ParseException e) {
System.out.println("Syntatic Error on Class initialization. " + e.toString());
    }
    ClassDeclaration_1();
  }

  static final public void ClassDeclaration_1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LCHAVETA:{
      ClassDeclaration_Not_Extends();
      break;
      }
    case EXTENDS:{
      ClassDeclaration_Extends();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ClassDeclaration_Not_Extends() throws ParseException {/*@bgen(jjtree) #CLASS( 3) */
  ASTCLASS jjtn000 = new ASTCLASS(JJTCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
error_skipto(e, "Class declaration", LCHAVETA);
      }
      Vars();
      Methods();
      try {
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
error_skipto(e, "Class declaration", RCHAVETA);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  3);
      }
    }
  }

  static final public void ClassDeclaration_Extends() throws ParseException {/*@bgen(jjtree) #CLASS_EXTENDS( 4) */
                                                     ASTCLASS_EXTENDS jjtn000 = new ASTCLASS_EXTENDS(JJTCLASS_EXTENDS);
                                                     boolean jjtc000 = true;
                                                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        jj_consume_token(EXTENDS);
        t = jj_consume_token(IDENTIFIER);
ASTEXTENDED_CLASS jjtn001 = new ASTEXTENDED_CLASS(JJTEXTENDED_CLASS);
                                   boolean jjtc001 = true;
                                   jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
                                   jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
        } finally {
if (jjtc001) {
                                     jjtree.closeNodeScope(jjtn001, true);
                                   }
        }
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
error_skipto(e, "Class declaration", LCHAVETA);
      }
      Vars();
      Methods();
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  4);
      }
    }
  }

  static final public void Methods() throws ParseException {/*@bgen(jjtree) METHODS */
  ASTMETHODS jjtn000 = new ASTMETHODS(JJTMETHODS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        jj_consume_token(PUBLIC);
        ClassDeclaration_Methods();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Vars() throws ParseException {/*@bgen(jjtree) VAR_DECLS */
  ASTVAR_DECLS jjtn000 = new ASTVAR_DECLS(JJTVAR_DECLS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case INT_ARRAY:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        VarDeclaration();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ClassDeclaration_Methods() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STATIC:{
      MainDeclaration();
      break;
      }
    case INT:
    case INT_ARRAY:
    case BOOLEAN:
    case IDENTIFIER:{
      MethodDeclaration();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) #VAR_DECL( 2) */
                                      ASTVAR_DECL jjtn000 = new ASTVAR_DECL(JJTVAR_DECL);
                                      boolean jjtc000 = true;
                                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
                            jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
      } finally {
if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
      }
      jj_consume_token(PVIRG);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  2);
      }
    }
  }

  static final public void Vars_Statement() throws ParseException {/*@bgen(jjtree) METHOD_BODY */
  ASTMETHOD_BODY jjtn000 = new ASTMETHOD_BODY(JJTMETHOD_BODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Vars_Statement_Aux();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Vars_Statement_Aux() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case INT_ARRAY:
    case BOOLEAN:{
      Type_1();
      t = jj_consume_token(IDENTIFIER);
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
                              jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
      } finally {
if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001, true);
                              }
      }
ASTVAR_DECL jjtn002 = new ASTVAR_DECL(JJTVAR_DECL);
                                                                                                boolean jjtc002 = true;
                                                                                                jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(PVIRG);
      } finally {
if (jjtc002) {
                                                                                                  jjtree.closeNodeScope(jjtn002,  2);
                                                                                                }
      }
      Vars_Statement_Aux();
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
ASTIDENTIFIER jjtn003 = new ASTIDENTIFIER(JJTIDENTIFIER);
                       boolean jjtc003 = true;
                       jjtree.openNodeScope(jjtn003);
      try {
jjtree.closeNodeScope(jjtn003, true);
                       jjtc003 = false;
jjtn003.name = t.image; jjtn003.line = t.beginLine;
      } finally {
if (jjtc003) {
                         jjtree.closeNodeScope(jjtn003, true);
                       }
      }
      Vars_Statement_1();
      break;
      }
    case NOT_OP:
    case WHILE:
    case IF:
    case LPAR:
    case LCHAVETA:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case INTEGER:{
      Statement_Aux();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NOT_OP:
        case WHILE:
        case IF:
        case LPAR:
        case LCHAVETA:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case INTEGER:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        Statement();
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;

    }
  }

  static final public void Vars_Statement_1() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
                     jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
      } finally {
if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001, true);
                     }
      }
ASTVAR_DECL jjtn002 = new ASTVAR_DECL(JJTVAR_DECL);
                                                                                       boolean jjtc002 = true;
                                                                                       jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(PVIRG);
      } finally {
if (jjtc002) {
                                                                                         jjtree.closeNodeScope(jjtn002,  2);
                                                                                       }
      }
      Vars_Statement_Aux();
      break;
      }
    case AND_OP:
    case LT_OP:
    case PLUS_OP:
    case MINUS_OP:
    case TIMES_OP:
    case DIVIDE_OP:
    case NOT_OP:
    case ASSIGN:
    case LPAR:
    case DOT:
    case PVIRG:
    case LPARRETO:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case INTEGER:{
      Statement1();
      jj_consume_token(PVIRG);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NOT_OP:
        case WHILE:
        case IF:
        case LPAR:
        case LCHAVETA:
        case TRUE:
        case FALSE:
        case THIS:
        case NEW:
        case INTEGER:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        Statement();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) #MAIN( 2) */
                                   ASTMAIN jjtn000 = new ASTMAIN(JJTMAIN);
                                   boolean jjtc000 = true;
                                   jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(LPAR);
        jj_consume_token(STRING);
        jj_consume_token(LPARRETO);
        jj_consume_token(RPARRETO);
        t = jj_consume_token(IDENTIFIER);
ASTARGV jjtn001 = new ASTARGV(JJTARGV);
                                                                                      boolean jjtc001 = true;
                                                                                      jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
                                                                                      jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
        } finally {
if (jjtc001) {
                                                                                        jjtree.closeNodeScope(jjtn001, true);
                                                                                      }
        }
        jj_consume_token(RPAR);
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
error_skipto(e, "Main declaration", LCHAVETA);
      }
      Vars_Statement();
      try {
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
System.out.println("Missing } in Main Declaration." + e.toString());
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  2);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) #METHOD( 5) */
                                       ASTMETHOD jjtn000 = new ASTMETHOD(JJTMETHOD);
                                       boolean jjtc000 = true;
                                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
ASTNAME jjtn001 = new ASTNAME(JJTNAME);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
                            jjtc001 = false;
jjtn001.name = t.image; jjtn001.line = t.beginLine;
      } finally {
if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
      }
      jj_consume_token(LPAR);
      MethodDeclaration_Args();
      jj_consume_token(RPAR);
      jj_consume_token(LCHAVETA);
      Vars_Statement();
      Method_Return();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  5);
      }
    }
  }

  static final public void Method_Return() throws ParseException {/*@bgen(jjtree) RETURN_EXPRESSION */
                                           ASTRETURN_EXPRESSION jjtn000 = new ASTRETURN_EXPRESSION(JJTRETURN_EXPRESSION);
                                           boolean jjtc000 = true;
                                           jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(RETURN);
jjtn000.line = t.beginLine;
      Expression();
      jj_consume_token(PVIRG);
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
